
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-2 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-1810] Gender now saves correctly in user panel
- [#MODX-1635] Redirect to Users grid after creating a new user
- Fixed bug with import properties
- [#MODX-1971] Allow ./- in Context key names, but not as first character
- [#MODX-1997] Added ability to duplicate and set inactive/active Form Customization Rules, batch actions to Rule grid
- Cleaned up profile editing page
- Cleaned up style for headers on welcome page
- Reworked System Info page, cleaned up styling, display, info
- Added batch actions to Users grid
- Fixed bugs with removing directories in file tree
- [#MODX-1996] Fixed missing create/update settings windows
- Allow for separate paths on derivative resource types based on a [classkey]_delegate_path setting that points to their controllers, added checks to prevent path mapping
- Prevent deferred render on left nav trees, to prevent loading errors for js hooks
- Fixed bugs with MODx.grid.encodeModified/encode, plugin event saving
- Added loadCreateMenus JS event to modx-resource-tree modext widget
- Refactored js lang loading to allow for dynamic modification of strings
- [#MODX-1993] Moved config.inc.tpl to core/docs to prevent confusion
- Added description below TV rows in Resource edit
- [#MODX-1853] Fixed issue where reload button was above MODx.Browser in TV pane
- Switched Quick Create/Update Resource description field to more-used introtext field
- [#MODX-1992] Fixed error in modSnippet preventing multiple executions per request
- [#MODX-1983] Clarified package uninstall option message
- [#MODX-1982] Fixed broken cancel button on Package View page
- [#MODX-1989] Fixed incorrect var reference in getfiles processor